@@ -679,4 +679,5 @@ BUGFIXES:
 609 ==> 388705 - Unexpected crash on adding new items to the collection from an external application - 5.7.0 suse packages.
 610 ==> 402800 - Main album view does not update when moving images between albums.
 611 ==> 402811 - Drag-n-drop disabled in Geolocation editor.
-612 ==> 
+612 ==> 402812 - Use RED "recycle bin" icon from Albums context menus in all other 'delete' context menu items too.
+613 ==> 
